[package]
name = "powersoftau"
version = "0.1.1"
authors = ["Sean Bowe"]
license = "MIT/Apache-2.0"

description = "Communal zk-SNARK MPC for Public Parameters"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/ebfull/powersoftau"
repository = "https://github.com/ebfull/powersoftau"
edition = "2021"

[dependencies]
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-mnt4-753 = "0.4"
ark-mnt6-753 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3.1"
crossbeam = "0.8"
num_cpus = "1.16"
blake2 = "0.10"
bls12_381 = "0.8"
group = "0.13"
generic-array = "0.14"
num-traits = "0.2"
typenum = "1.16"
byteorder = "1.4"
pairing = "0.23"
hex-literal = "0.4"
rust-crypto = "0.2"
bellman = "0.14"

[features]
u128-support = [] #"pairing/u128-support"
